# kmeans-thesis-segmentation

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  requirements.txt
include/backend/: cuda_assignment_context.hpp
include/clustering/: clustering_factory.hpp  clustering_manager.hpp
include/clustering/engines/: classical_engine.hpp  kmeans_engine.hpp  quantum_engine.hpp
include/clustering/initializers/: initializer.hpp  kmeans_plus_plus_initializer.hpp  random_initializer.hpp
include/clustering/preprocessors/: data_preprocessor.hpp  full_data_preprocessor.hpp  rcc_data_preprocessor.hpp
include/common/: config.hpp  constants.hpp  enums.hpp  utils.hpp
include/core/: coreset.hpp  rcc.hpp
include/io/: application.hpp
src/: main.cpp
src/backend/: cuda_kernels.cu
src/clustering/: classical_engine.cpp  clustering_factory.cpp  clustering_manager.cpp  flat_data_preprocessor.cpp  kmeans_plus_plus_initializer.cpp  random_initializer.cpp  rcc_data_preprocessor.cpp
src/clustering/engines/: classical_engine.cpp  quantum_engine.cpp  quantum_engine.py
src/clustering/initializers/: kmeans_plus_plus_initializer.cpp  random_initializer.cpp
src/clustering/preprocessors/: full_data_preprocessor.cpp  rcc_data_preprocessor.cpp
src/common/: utils.cpp
src/core/: coreset.cpp  rcc.cpp
src/io/: application.cpp  video_io.cpp
